--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "egg": "^3.17.5",
     "egg-scripts": "2",
     "egg-socket.io": "^4.1.6",
+    "egg-view-assets": "^1.9.0",
     "egg-view-nunjucks": "^2.3.0",
     "egg-websocket-plugin": "^3.0.0-beta.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "roadhog": "^0.6.1"
   },
   "devDependencies": {
     "egg-bin": "6",
@@ -26,7 +28,7 @@
   "scripts": {
     "start": "egg-scripts start --daemon --title=egg-server-learn-egg-v2",
     "stop": "egg-scripts stop --title=egg-server-learn-egg-v2",
-    "dev": "egg-bin dev  --sticky",
+    "dev": "egg-bin dev  --sticky --port 7008",
     "test": "npm run lint -- --fix && npm run test:local",
     "test:local": "egg-bin test",
     "cov": "egg-bin cov",
